DTraceTools are all of the DTrace scripts we provide
to customers that work inside SmartMachines.  This
package is available in pkgsrc: 'dtracetools'

dtracetools-0.1
* initial release

dtracetools-x.x
* removed dtrace-pathopens.d
* updated dtrace-php_flow.d to work
* added dtrace-slowhttpdconnect-stacks.d dtrace-topcallsbyprocess.d
* removed dtrace-uname-a.d dtrace-weblatency.d
* removed dtrace-wpm.d dtrace-loads.d
* removed dtrace-mmapfiles.d
* updated dtrace-filebyproc.d to work
* removed dtrace-runocc.d